# h2smas

./: .gitignore  CMakeLists.txt
agents/: CMakeLists.txt  CommFloodingAgent.cpp  CommFloodingAgent.h  main.cpp
core/: AgentRequestHandler.cpp  AgentRequestHandler.h  CMakeLists.txt  DummyEnvironment.cpp  DummyEnvironment.h  EnvironmentIF.cpp  EnvironmentIF.h  EnvironmentManager.cpp  EnvironmentManager.h  HHSMASCore.cpp  HHSMASCore.h  IncomingConnectionsManager.cpp  IncomingConnectionsManager.h  Position.cpp  Position.h  TCPConnection.cpp  TCPConnection.h
docs/sequenceDiagrams/: connection.puml
tests/: CMakeLists.txt  tests.cpp
